# outi-latex

./: .env.example  .gitignore  .pylintrc  DATABASE.md  Dockerfile  LICENSE  README.md  check_database.py  docker-compose.yml  form-fields.json  log.html  output.xml  pyproject.toml  report.html  retro.md  seed_database.py
.github/actions/: ci.yaml
.github/workflows/: ci.yaml
src/: __init__.py  app.py  config.py  db_helper.py  index.py  schema.sql  util.py
src/static/: navbar.js  styles.css
src/story_tests/: auth.robot  bibtex_export.robot  conftest.robot  fetch_ref_types.robot  filter_and_sort_search.robot  form_is_shown.robot  public_private_refs.robot  references_are_saved.robot  user_can_add_tags.robot  user_can_edit_refs.robot  user_can_fetch_with_doi.robot  user_can_manage_groups.robot  user_can_see_all_refs.robot  user_can_switch_to_dark_mode.robot  user_page_isolation.robot  user_search.robot  user_x_manage_groups.robot
src/templates/: add_reference.html  all.html  base.html  group.html  index.html  login.html  search.html  signup.html  user.html
src/tests/: app_tests.py  conftest.py  e2e_tests.py  filtering_sorting_tests.py  references_tests.py  tags_tests.py  user_page_isolation_tests.py  util_tests.py
src/utils/: references.py  tags.py  users.py
