[tool.poetry]
name = "outi-latex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
dotenv = "^0.9.9"
flask = "^3.1.2"
sqlalchemy = "^2.0.44"
flask-sqlalchemy = "^3.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
