[tool.poetry]
name = "outi-latex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.9.9"
flask = "^3.1.2"
sqlalchemy = "^2.0.44"
flask-sqlalchemy = "^3.0.0"
psycopg2-binary = "^2.9.0"
pytest = "^9.0.0"
robotframework = "^7.3.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
black = "^24.0.0"
isort = "^5.13.0"
autoflake = "^2.0.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.autoflake]
check = false
imports = ["django", "requests"]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
